<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home"
            android:icon="@drawable/ic_baseline_contacts_24"/>
        <item
            android:id="@+id/nav_summery"
            android:title="@string/menu_summery"
            android:icon="@drawable/ic_baseline_description_24"/>
        <item
            android:id="@+id/nav_signin"
            android:title="@string/menu_signin"
            android:icon="@drawable/ic_baseline_login_24"/>
        <item
            android:id="@+id/nav_settings"
            android:title="@string/menu_settings"
            android:icon="@drawable/ic_baseline_settings_24"/>
    </group>
</menu>