<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mukul.client_billing_activity.AddClientAvtivity"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/enter_client_details"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/name_lbl"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/text_black"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:inputType="text"
        android:id="@+id/client_name_txt"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:id="@+id/address_lbl"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/text_black"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:inputType="textMultiLine"
        android:gravity="top"
        android:id="@+id/client_address_txt"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_no"
        android:id="@+id/contact_no_lbl"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/text_black"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:id="@+id/client_contact_txt"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/submit"
            android:layout_gravity="center"
            android:paddingRight="35sp"
            android:paddingTop="7sp"
            android:paddingBottom="7sp"
            android:paddingLeft="35sp"
            android:id="@+id/add_client"
            android:textSize="@dimen/fab_margin"
            android:background="@drawable/button_submit"/>
</LinearLayout>
</ScrollView>