<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mukul.client_billing_activity.ClientActivity"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="15sp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/na"
            android:textSize="15sp"
            android:id="@+id/client_name_data"
            android:layout_marginTop="10sp"
            android:layout_marginStart="5sp"
            android:textColor="@color/text_black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_no"
            android:textSize="15sp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/na"
            android:textSize="15sp"
            android:id="@+id/client_contact_data"
            android:layout_marginTop="10sp"
            android:layout_marginStart="5sp"
            android:textColor="@color/text_black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adress"
            android:textSize="15sp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/na"
            android:textSize="15sp"
            android:id="@+id/client_address_data"
            android:layout_marginTop="10sp"
            android:layout_marginStart="5sp"
            android:textColor="@color/text_black"/>
    </LinearLayout>

    <android.support.design.widget.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabTextColor="@color/colorPrimary"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/colorPrimary"
        android:id="@+id/tablayout"
        app:tabIndicatorHeight="3dp"
        app:tabTextAppearance="@style/TabLayoutTextStyle"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Transections"
            android:id="@+id/transection_tab"/>
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Generated Bils"
            android:textStyle="bold"
            android:id="@+id/generated_bill_tab" />
        
    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/viewPager" />


</LinearLayout>